[project]
name = "nonebot-plugin-novelai"
version = "0.6.0"
description = "基于nonebot2的novelai绘图插件"
authors = [
    { name = "sena-nana", email = "851183156@qq.com" },
    { email = "sena-nana <851183156@qq.com>" },
]
dependencies = [
    "aiofiles>=22.1.0",
    "aiohttp>=3.8.3",
    "githubkit>=0.9.4",
    "lxml>=4.9.2",
    "mistune>=2.0.4",
    "nonebot-adapter-onebot>=2.1.3",
    "nonebot2>=2.0.0b4",
    "pillow>=9.2.0",
    "xmltodict>=0.13.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
[project.urls]
Homepage = "https://nb.novelai.dev"

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
