[project]
name = "nonebot-plugin-novelai"
version = "1.0.0a1"
description = "基于nonebot2的ai绘图插件"
authors = [
    { name = "sena-nana", email = "34237511+sena-nana@users.noreply.github.com" },
]
dependencies = ["nonebot2>=2.1.1"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
[project.urls]
Homepage = "https://nb.novelai.dev"
[tool.setuptools]
packages = ["nonebot_plugin_novelai"]
